Add basic navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+  <nav>
+    <!-- https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp -->
+    <a href="./index.html">About</a>
+    <a href="./code_projects.html">Code</a>
+    <a href="./music.html">Music</a>
+    <a href="./contact_links.html">Contact</a>
+    <a href="./misc.html">Miscelania</a>
+  </nav>
   <main>
     {{ content }}
   </main>
