Add left-side and right-side classes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="left-side">
     <!-- https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp -->
     <a href="./index.html">About</a>
     <a href="./code_projects.html">Code</a>
