--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 body {
   margin: auto;
   width: 90%;
+  font-family: Palatino, "Palatino Linotype", Times, "Times New Roman", serif
 }
 
 main {
@@ -72,7 +73,7 @@ nav a:last-child {
   /* align-self: flex-start; */
 }
 
-.project-info{
+.project-info {
   padding: 1em;
 }
 
