--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,10 @@
 
 <body>
   <nav class="left-side">
-    <!-- https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp -->
     <a href="./index.html">About</a>
     <a href="./code_projects.html">Code</a>
     <a href="./music.html">Music</a>
-    <a href="./misc.html">Miscelania</a>
+    <!-- <a href="./misc.html">Miscelania</a> -->
   </nav>
   <main>
     {{ content }}
