--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,13 @@ nav a:first-child {
   display: flex;
 }
 
+#avatar {
+  /* max-height: 40vh;
+  max-width: 40vh; */
+  border: 1px solid #AACCBC;
+  padding: 1em;
+}
+
 #summary {
   padding: 0 1em;
 }
@@ -78,7 +85,7 @@ nav a:first-child {
   padding: 1em;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 800px) {
   body {
     width: 95%;
   }
@@ -87,6 +94,9 @@ nav a:first-child {
   }
   .right-side {
     width: 100%;
+  }
+  #avatar {
+    max-width: 50%;
   }
   #about {
     flex-direction: column-reverse;
@@ -102,5 +112,11 @@ nav a:first-child {
   }
   .project h2 {
     padding: 0.5em;
+  }
+}
+
+@media (max-width: 400px) {
+  #avatar {
+    max-width: 100%;
   }
 }
