--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,21 @@
 * {
   box-sizing: border-box;
-  /* background-color: slategray; */
+  background-color: #8090a0;
+  color: #eee;
 }
 
 body {
   margin: auto;
   width: 90%;
   font-family: Palatino, "Palatino Linotype", Times, "Times New Roman", serif;
-  background-color: seashell;
+  /* background-color: seashell; */
+}
+
+a {
+  color: #C2CFDC;
+}
+:visited{
+  color: #C2C1E9;
 }
 
 main {
@@ -21,14 +29,14 @@ nav {
 }
 
 nav a {
-  border-right: solid #AACCBC 2px;
+  border-right: solid #C2CFDC 2px;
   padding: 1em;
   width: 33.33%;
   text-align: center;
 }
 
 nav a:first-child {
-  border-left: solid #AACCBC 2px;
+  border-left: solid #C2CFDC 2px;
 }
 
 .left-side {
@@ -50,7 +58,7 @@ img {
 #avatar {
   /* max-height: 40vh;
   max-width: 40vh; */
-  border: 1px solid #AACCBC;
+  border: 1px solid #C2CFDC;
   padding: 1em;
 }
 
@@ -73,7 +81,7 @@ img {
   align-items: center;
   vertical-align: middle;
   align-content: space-around;
-  border: 1px solid #AACCBC;
+  border: 1px solid #C2CFDC;
   padding: 1em;
 }
 
