Add draft of FAQ page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
 <body>
   <nav class="left-side">
     <a href="./index.html">About</a>
-    <a href="./code_projects.html">Code</a>
+    <a href="./faq.html">FAQ</a>
+    <a href="./code_projects.html">Software</a>
     <a href="./music.html">Music</a>
     <!-- <a href="./misc.html">Miscelania</a> -->
   </nav>
