--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <nav class="left-side">
     <a href="./index.html">About</a>
     <a href="./faq.html">FAQ</a>
-    <a href="./code_projects.html">Software</a>
+    <a href="https://github.com/ForrestWeiswolf">Software</a>
     <a href="./music.html">Music</a>
     <!-- <a href="./misc.html">Miscelania</a> -->
   </nav>
