Add Miscellania page with list of favorite lesser known SF&F

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <a href="./faq.html">FAQ</a>
     <a href="https://github.com/ForrestWeiswolf">Software</a>
     <a href="./music.html">Music</a>
-    <!-- <a href="./misc.html">Miscelania</a> -->
+    <a href="./miscellania.html">Miscellania</a>
   </nav>
   <main>
     {{ content }}
