Use site.url for links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
 
 <body>
   <nav class="left-side">
-    <a href="./index.html">About</a>
-    <a href="./faq.html">FAQ</a>
+    <a href="{{ site.url }}/index.html">About</a>
+    <a href="{{ site.url }}/faq.html">FAQ</a>
     <a href="https://github.com/ForrestWeiswolf">Software</a>
-    <a href="./music.html">Music</a>
-    <a href="./miscellania.html">Miscellania</a>
+    <a href="{{ site.url }}/music.html">Music</a>
+    <a href="{{ site.url }}/miscellania.html">Miscellania</a>
   </nav>
   <main>
     {{ content }}
