Re-add about/contact as its own page, with some improvements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav class="left-side">
-    <!-- <a href="{{ site.url }}/index.html">About</a> -->
+    <a href="{{ site.url }}/about.html">About/Contact</a>
     <a href="{{ site.url }}/faq.html">FAQ</a>
     <a href="https://github.com/ForrestWeiswolf">Software</a>
     <a href="{{ site.url }}/music.html">Music</a>
