--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,20 @@ body {
   margin: auto;
   width: 90%;
   font-family: Palatino, "Palatino Linotype", Times, "Times New Roman", serif;
-  background-color: whitesmoke;
+  background-color: #252500;
+  color: #BBB;
   line-height: 1.4em;
   padding-bottom: 1em;
 }
+
+a {
+  color: #AAAAFF;
+}
+
+/*
+a:visited {
+  color: #8888FF;
+} */
 
 main {
   flex-direction: column;
@@ -31,7 +41,7 @@ nav {
 }
 
 nav a {
-  border-right: solid #505DFA 2px;
+  border-right: solid #606DFA 2px;
   padding: 1em;
   width: 33.33%;
   text-align: center;
@@ -55,8 +65,10 @@ nav > a:first-child {
 }
 
 .large-image {
-  border: 2px solid #505DFA;
+  border: 2px solid #606DFA;
   padding: 1em;
+  width: 100%;
+  height: 100%;
 }
 
 li {
