--- a/css/main.css
+++ b/css/main.css
@@ -85,13 +85,14 @@ li:first-child {
   vertical-align: middle;
   align-content: space-around;
   border: 2px solid #505DFA;
+  padding: 1em;
 }
 
 .project img {
   height: 6em;
   width: 6em;
   display: inline-block;
-  margin: 1em;
+  margin-right: 1em;
 }
 
 .project-info {
