--- a/css/main.css
+++ b/css/main.css
@@ -7,20 +7,26 @@ body {
   margin: auto;
   width: 90%;
   font-family: Palatino, "Palatino Linotype", Times, "Times New Roman", serif;
-  background-color: #252500;
-  color: #BBB;
   line-height: 1.4em;
   padding-bottom: 1em;
 }
 
-a {
-  color: #AAAAFF;
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #252500;
+    color: #BBB;
+  }
+
+  a {
+    color: #AAAAFF;
+  }
 }
 
-/*
-a:visited {
-  color: #8888FF;
-} */
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: #f5f5f5;
+  }
+}
 
 main {
   flex-direction: column;
