--- a/_layouts/no-navbar.html
+++ b/_layouts/no-navbar.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width initial-scale=1.0">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href="../css/main.css">
+  <link rel="stylesheet" type="text/css" href="../css/media-queries.css">
+  <link rel="icon" href="./assets/images/glyph.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
