Prefer Arial to Times

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 body {
   margin: auto;
   width: 90%;
-  font-family: Palatino, "Palatino Linotype", Times, "Times New Roman", serif;
+  font-family: Palatino, "Palatino Linotype", Arial, Helvetica, serif;
   line-height: 1.4em;
   padding-bottom: 1em;
 }
