--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,12 @@ body {
   padding-bottom: 1em;
 }
 
+header {
+  padding-bottom: 2em;
+  margin-bottom: 2em;
+  border-bottom: solid 1px;
+}
+
 main {
   flex-direction: column;
   display: flex;
