--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <nav class="left-side">
     <a href="{{ site.url }}/about.html">About/Contact</a>
     <a href="{{ site.url }}/faq.html">FAQ</a>
-    <a href="https://github.com/ForrestWeiswolf">Software</a>
+    <a href="{{ site.url }}/software.html">Software</a>
     <a href="{{ site.url }}/music.html">Music</a>
     <a href="{{ site.url }}/miscellania.html">Miscellania</a>
   </nav>
