--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <a href="{{ site.url }}/about.html">About/Contact</a>
     <a href="{{ site.url }}/software.html">Software</a>
     <a href="{{ site.url }}/music.html">Music</a>
-    <a href="{{ site.url }}/miscellania.html">Miscellania</a>
+    <a href="{{ site.url }}/miscellanea.html">Miscellanea</a>
   </nav>
   <main>
     {{ content }}
