Don't use relative paths in links

--- a/_layouts/encrypted.html
+++ b/_layouts/encrypted.html
@@ -7,7 +7,7 @@
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/main.css">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/media-queries.css">
-  <link rel="icon" href="./assets/images/glyph.png">
+  <link rel="icon" href="{{ site.url }}/assets/images/glyph.png">
   <link rel="manifest" href="/site.webmanifest">
 
   <script src="{{ site.url }}/hidden/cryptography.js" defer></script>
