--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="left-side">
-    <a href="{{ site.url }}/about.html">About/Contact</a>
+    <a href="{{ site.url }}">About/Contact</a>
     <a href="{{ site.url }}/software.html">Software</a>
     <a href="{{ site.url }}/music.html">Music</a>
     <a href="{{ site.url }}/miscellanea.html">Miscellanea</a>
